@@ -179,6 +179,10 @@ Print a help message and exit successfully.
 .B \-d, \-\-debug
 Enable verbose debug messages.
 
+.TP
+.B \-\-version
+Print the current version number and exit successfully.
+
 .SH FILES
 
 .TP
