@@ -45,6 +45,10 @@ Print a help message and exit successfully.
 .B \-d, \-\-debug
 Enable verbose debug messages.
 
+.TP
+.B \-\-version
+Print the current version number and exit successfully.
+
 .SH POLICY
 
 The umount will succeed if all of the following conditions are met:
