@@ -3,6 +3,7 @@ Development
 - pmount: mount vfat with shortname=mixed option for better WinXP compatibility
 - fix configure check to work with libsysfs versions 1.3 and 2.0
 - pmount, pumount: do not link against dbus and hal libraries
+- pmount, pumount: support --version argument
 
 0.9.6
 -----
